version/0.26/_sources/api/solver/_autosummary/settings/radiation_4.rst.txt
:orphan:

.. _radiation_4:

radiation
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.radiation_4.radiation
    :show-inheritance:

.. rubric:: Attributes

==============================================================================================================   =======================================================================

Attribute                                                                                                                                                                        Summary

==============================================================================================================   =======================================================================
:ref:`radiation_bc <radiation_bc>`                                                                                                                                    Radiation BC Type.

:ref:`radial_direction <radial_direction>`                                                                                                              Set radial direction components.

:ref:`theta_width_of_beam <theta_width_of_beam>`                                                                                                                    Theta Width of Beam.

:ref:`phi_width_of_beam <phi_width_of_beam>`                                                                                                                          Phi Width of Beam.

:ref:`direct_irradiation <direct_irradiation>`                                                                                         Settings for direct irradiation on this boundary.

:ref:`diffuse_irradiation <diffuse_irradiation>`                                                                                      Settings for diffuse irradiation on this boundary.

:ref:`parallel_collimated_beam <parallel_collimated_beam>`                                                           Specify whether direct irradiation is applied parallel to the beam.

:ref:`use_beeam_direction_from_solar_load_model_settings <use_beeam_direction_from_solar_load_model_settings>`                        Use Beam Direction from Solar Load Model Settings.

:ref:`use_irradiation_from_solar_soad_model_settings <use_irradiation_from_solar_soad_model_settings>`                                   Use Irradiation from Solar Load Model Settings.

:ref:`external_black_body_temperature_method <external_black_body_temperature_method>`                                                    Select External Black Body Temperature Method.

:ref:`black_body_temperature <black_body_temperature>`                                                                                                   Specify Black Body Temperature.

:ref:`internal_emissivity <internal_emissivity>`                                                                                                            Specify Internal Emissivity.

:ref:`participates_in_solar_ray_tracing <participates_in_solar_ray_tracing>`                                                 Select whether to participates in Solar Ray Tracing or not.

:ref:`solar_transmissivity_factor <solar_transmissivity_factor>`                                                                                    Specify Solar Transmissivity Factor.

:ref:`radiating_s2s_surface <radiating_s2s_surface>`                                                                                           Participates in View Factor Calculation?.

==============================================================================================================   =======================================================================

.. rubric:: Included in:

==========================================================   ==============================================

Parent                                                                                              Summary

==========================================================   ==============================================
:ref:`pressure_far_field_child <pressure_far_field_child>`       'child_object_type' of pressure_far_field.

:ref:`phase_child <phase_child_20>`                                           'child_object_type' of phase.

:ref:`phase_child <phase_child_47>`                                           'child_object_type' of phase.

==========================================================   ==============================================

