version/0.27/_sources/api/solver/_autosummary/settings/radiation_4.rst.txt
:orphan:

.. _radiation_4:

radiation
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.radiation_4
    :show-inheritance:

.. rubric:: Attributes

==============================================================================================================   =======================================================================

Attribute                                                                                                                                                                        Summary

==============================================================================================================   =======================================================================
:ref:`radiation_bc <radiation_bc>`                                                                                                                                    Radiation BC Type.

:ref:`theta_width_of_beam <theta_width_of_beam>`                                                                                                                    Theta Width of Beam.

:ref:`phi_width_of_beam <phi_width_of_beam>`                                                                                                                          Phi Width of Beam.

:ref:`direct_irradiation <direct_irradiation>`                                                                                         Settings for direct irradiation on this boundary.

:ref:`diffuse_irradiation <diffuse_irradiation>`                                                                                      Settings for diffuse irradiation on this boundary.

:ref:`parallel_collimated_beam <parallel_collimated_beam>`                                                           Specify whether direct irradiation is applied parallel to the beam.

:ref:`use_beeam_direction_from_solar_load_model_settings <use_beeam_direction_from_solar_load_model_settings>`                        Use Beam Direction from Solar Load Model Settings.

:ref:`use_irradiation_from_solar_soad_model_settings <use_irradiation_from_solar_soad_model_settings>`                                   Use Irradiation from Solar Load Model Settings.

:ref:`external_black_body_temperature_method <external_black_body_temperature_method>`                                                    Select External Black Body Temperature Method.

:ref:`black_body_temperature <black_body_temperature>`                                                                                                   Specify Black Body Temperature.

:ref:`internal_emissivity <internal_emissivity>`                                                                                                            Specify Internal Emissivity.

:ref:`participates_in_solar_ray_tracing <participates_in_solar_ray_tracing>`                                                 Select whether to participates in Solar Ray Tracing or not.

:ref:`solar_transmissivity_factor <solar_transmissivity_factor>`                                                                                    Specify Solar Transmissivity Factor.

:ref:`radiating_s2s_surface <radiating_s2s_surface>`                                                                                           Participates in View Factor Calculation?.

==============================================================================================================   =======================================================================

.. rubric:: Included in:

======================================   =============================================

Parent                                                                         Summary

======================================   =============================================
:ref:`outflow_child <outflow_child>`                   'child_object_type' of outflow.

:ref:`phase_13_child <phase_13_child>`                   'child_object_type' of phase.

:ref:`settings_16 <settings_16>`             Select domain name to define settings on.

:ref:`phase_39_child <phase_39_child>`                   'child_object_type' of phase.

======================================   =============================================

